<resources>
    <string name="app_name">EasyDoso_Profissional</string>
    <string name="phone_number">Telefone</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Nome completo</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="cpf">CPF</string>
    <string name="get_location">Obter localização</string>
    <string name="services">Serviços</string>
    <string name="latitude_0">Latitude : 0</string>
    <string name="birth_date">Nascimento</string>
    <string name="nome_completo">Nome Completo :</string>
    <string name="email">Email :</string>
    <string name="phone_number2">Telefone :</string>
    <string name="cpf2">CPF :</string>
    <string name="birthdate">Nascimento :</string>
    <string name="should_select_one">DEVE SELECIONAR UM</string>
    <string name="services2">Serviços :</string>
    <string name="longitude_0">Longitude : 0</string>
    <string name="logout">Sair</string>
    <string name="your_email_is_not_verified">Seu e-mail não foi verificado!</string>
    <string name="click_to_verify_now">Enviar link de ativação</string>
    <string name="change_picture">Mudar foto</string>
    <string name="reset_password">Redefinir Senha</string>
    <string name="full_name2">Nome Completo :</string>
    <string name="phone">Telefone :</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude">Latitude :</string>
    <string name="birthdate2">Nascimento :</string>
    <string name="birthdate3">Nascimento</string>
    <string name="_0">0</string>
    <string name="phone2">Telefone</string>
    <string name="email2">Email</string>
    <string name="professional_app">Professional App</string>
    <string name="login">Entrar</string>
    <string name="password">Senha</string>
    <string name="new_here_create_account">Não tem conta? CADASTRE-SE.</string>
    <string name="forgotpassword_click_here">Esqueceu sua senha?</string>
    <string name="create_new_account">Criar nova conta</string>
    <string name="fullname">Nome completo</string>
    <string name="register">Cadastrar</string>
    <string name="already_registered_login_here">Já tem uma conta? ENTRE.</string>
    <string name="main_title">main title</string>
    <string name="sub_title">sub title</string>
</resources>